Se incluyeron comentarios

--- a/web-app/css/mobile.css
+++ b/web-app/css/mobile.css
@@ -1,6 +1,6 @@
 /* Styles for mobile devices */
-
-@media screen and (max-width: 480px) {
+/*480*/
+@media screen and (max-width: 960px) {
 	.nav {
 		padding: 0.5em;
 	}
