--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -185,6 +185,14 @@ body {
 	margin: 0px 0px 10px 0px;
 }
 
+#video
+{
+	border-style:solid;
+	border-width:5px;
+	width: 560.4px;
+	height: 315.4px;
+}
+
 /* GENERAL */
 
 li {
