Agregada el boton de recomendar
* se agrego el nuevo domain recomendados
* se agrego un boton a todos los perfiles para poder recomendar
* se agrego la libreria colorbox

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -830,6 +830,39 @@ a.skip {
 	left: -9999px;
 }
 
+.botton-recomendar {
+	-webkit-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+	-moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+	box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+	border-bottom-color:#333;
+	border:1px solid #61c4ea;
+	background-color:#179BC9;
+	color:#FFFFFF;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	font-size:12px;
+	padding:5px;
+	width: 100px;
+}
+
+.botton-recomendar:disabled {
+	-webkit-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+	-moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+	box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
+	border-bottom-color:#333;
+	border:1px solid #61c4ea;
+	background-color:#FFF;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	color:#333;
+	font-size:12px;
+	text-shadow:#b2e2f5 0 1px 0;
+	padding:5px;
+	width: 100px;
+}
+
 /* TABLES */
 #tableIndex {
 	width: 50%;
