--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -129,11 +129,24 @@ body {
 	margin-bottom: 10px;
 }
 
-#tituloBox {
+.tituloBox {
 	color: #179BC9;
 	font-weight: bold;
 	font-size: 20px;
 	margin-bottom: 10px;
+}
+
+.tituloBox2 {
+	color: #179BC9;
+	font-weight: bold;
+	font-size: 15px;
+	margin-bottom: 10px;
+}
+
+
+#tab-1
+{
+	margin-bottom: 15px;
 }
 
 /* ANUNCIO */
@@ -591,6 +604,7 @@ input:invalid:focus,select:invalid:focus,textarea:invalid:focus {
 	float: left;
 	margin-right: 10px;
 	border: 3px solid black;
+	
 }
 
 #telefono {
@@ -640,7 +654,7 @@ input:invalid:focus,select:invalid:focus,textarea:invalid:focus {
 
 .post {
 	margin-top: 10px;
-	padding: 15px 15px 15px 15px;
+	padding: 10px 15px 25px 15px;
 }
 
 .post > a:FIRST-CHILD
@@ -649,6 +663,7 @@ input:invalid:focus,select:invalid:focus,textarea:invalid:focus {
 	display: block;
 	height: 100px;
 	width: 50%;
+	z-index: -10;
 }
 
 .post input {
@@ -700,23 +715,28 @@ input:invalid:focus,select:invalid:focus,textarea:invalid:focus {
 
 /* LOGIN */
 
-#cuadroIzq {
+.arriba
+{
+	
+}
+
+.cuadroIzq {
 	float: left;
 	width: 42%;
 	padding: 20px;
 }
 
-#cuadroDer {
+.cuadroDer {
 	float: right;
 	width: 45%;
 	padding: 20px;
 }
 
-#cuadroIzq ul {
+.cuadroIzq ul {
 	margin-top: 10px;
 }
 
-#cuadroDer ul {
+.cuadroDer ul {
 	margin-top: 10px;
 }
 
@@ -830,40 +850,55 @@ a.skip {
 	left: -9999px;
 }
 
-.botton-recomendar {
+/**
+ CSS de Recomendaciones
+*/
+
+#botton-recomendar
+{
 	-webkit-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
 	-moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
 	box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
 	border-bottom-color:#333;
 	border:1px solid #61c4ea;
-	background-color:#179BC9;
-	color:#FFFFFF;
 	border-radius:5px;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
 	font-size:12px;
 	padding:5px;
+	cursor: pointer;
+	
+}
+
+.botton-recomendar-enable {
+	background-color:#179BC9;
+	color:#FFFFFF;	
 	width: 100px;
 }
 
-.botton-recomendar:disabled {
-	-webkit-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
-	-moz-box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
-	box-shadow:rgba(0,0,0,0.2) 0 1px 0 0;
-	border-bottom-color:#333;
-	border:1px solid #61c4ea;
+.botton-recomendar-disabled {
 	background-color:#FFF;
-	border-radius:5px;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
 	color:#333;
-	font-size:12px;
 	text-shadow:#b2e2f5 0 1px 0;
-	padding:5px;
 	width: 100px;
 }
+
+.textoRecomendacion
+{
+	font-size: 13px;
+	font-weight: normal;
+	margin-top: 5px;
+}
+
+.post .title .textoRecomendacion a
+{
+	text-decoration: underline;
+	color:#179BC9;
+}
+
 
 /* TABLES */
+
 #tableIndex {
 	width: 50%;
 	margin: 0px auto;
@@ -951,4 +986,9 @@ th.desc a {
 
 th:hover,tr:hover {
 	background: #E1F2B6;
+}
+
+.fb-like-box
+{
+	margin-left: 15px;
 }
